[tool.poetry]
name = "pep440-version-utils"
version = "0.1.1"
description = "Utilities to deal with pep440 versioning"
authors = ["Maxime Verger <me@maxvdb.com>"]
license = "MIT"
maintainers = ["Maxime Verger <me@maxvdb.com>"]
readme = "README.md"
homepage = "https://github.com/m-vdb/pep440-version-utils"
repository = "https://github.com/m-vdb/pep440-version-utils"
keywords = ["pep440", "version"]

[tool.poetry.dependencies]
python = "^3.7"
packaging = "^20.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
coveralls = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
