[tool.poetry]
name = "pep440-version-utils"
version = "1.2.0"
description = "Utilities to deal with pep440 versioning"
authors = ["Maxime Verger <me@maxvdb.com>"]
license = "MIT"
maintainers = ["Maxime Verger <me@maxvdb.com>"]
readme = "README.md"
homepage = "https://github.com/m-vdb/pep440-version-utils"
repository = "https://github.com/m-vdb/pep440-version-utils"
keywords = ["pep440", "version"]
classifiers = ["Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License"]

[tool.poetry.dependencies]
python = ">=3.8,<3.14"
packaging = ">=21.3,<25"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
